# httpenv-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sample.env  Dockerfile  Makefile  README.md  compose.yml  fake_secret.py  pyproject.toml
.github/: AGENTS.md  CONTRIBUTING.md  SECURITY.md  renovate.json
.github/actions/hello/: action.yml
.github/actions/vault/: action.yml
.github/workflows/: branch.yml  cron.yml  main.yml  pr.yml  repo.yml
app/: login.py  main.py  patato.py
app/research/: test.ps1
data/: quebec_users.json
scripts/: faker_qc.py
tests/: test_healthchecky.py  test_main.py
