[project]
name = "httpenv-app"
version = "0.1.0"
description = "Tiny HTTP server showing the environment variablesn"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.7.9",
    "fastapi>=0.95.0",
    "httpx>=0.28.1",
    "uvicorn>=0.21.1",
]

[dependency-groups]
dev = [
  "mypy>=1.17.1",
  "pytest>=8.3.5",
  "pytest-cov>=6.2.1",
  "python-semantic-release>=10.3.1",
  "ruff>=0.12.11",
  "ty>=0.0.1a19",
]


[tool.semantic_release]
allow_zero_version = false
branch = "main"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): v{version}"
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
